--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,8 @@
     "js": "index.js",
     "css": "styles.css",
     "author": "",
-    "version": "0.0.1",
-    "homePage": "",
-    "description": "Blank placeholder extension (settings scaffold).",
+    "version": "0.0.2",
+    "homePage": "https://rentry.org/structuredprefill",
+    "description": "Prefill-like behavior using Structured Outputs (json_schema) instead of assistant-role prefills.",
     "auto_update": false
 }
